--- a/Stop.tex
+++ b/Stop.tex
@@ -38,7 +38,7 @@ Since only simulated events are used, no dedicated event cleaning filters are ap
 \fontsize{9 pt}{1.2 em}
 \selectfont
 \centering
-\caption{Event yields and cut flow from MC simulated samples after various requirements described in the text. All numbers are scaled to 19.5\fbinv. Only statistical uncertainties are shown in the table. The signal points are labeled as (X, Y) where X is the top squark mass and Y is the LSP mass.}
+\caption{Event yields and cut flow from MC simulated samples after various requirements described in the text. All numbers are scaled to 19.5\fbinv. Only statistical uncertainties are shown in the table. The signal points are labelled as (X, Y) where X is the top squark mass and Y is the LSP mass.}
 \makebox[\linewidth]{
 \begin{tabular}{cccccc}
 \multicolumn{6}{c}{} \\
@@ -68,7 +68,7 @@ Since only simulated events are used, no dedicated event cleaning filters are ap
     \end{center}
   \end{minipage}
 
-  \caption{Comparison of selected \HT (\textit{top left}), \met (\textit{top right}) and \NJets (\textit{bottom}) distributions in simulated events found from applying the baseline selection criteria. The signal points are labeled as (X, Y) where X is the top squark mass and Y is the LSP mass.}
+  \caption{Comparison of selected \HT (\textit{top left}), \met (\textit{top right}) and \NJets (\textit{bottom}) distributions in simulated events found from applying the baseline selection criteria. The signal points are labelled as (X, Y) where X is the top squark mass and Y is the LSP mass.}
   \label{fig:stop_baseline}
 \end{figure}
 In order to investigate how this baseline selection can be further improved to gain sensitivity to the model of interest the evolution of the signal and background efficiencies is studied when changing specific selections in the analysis. In general, the signal and background efficiencies $\epsilon_\mathrm{sig/bg}$ are defined according to
@@ -139,7 +139,7 @@ The resulting distributions for \HT, \met and \NJets after requiring the presenc
   \begin{tabular}{c}
                 \includegraphics[width=0.49\textwidth]{figures/Stop_DeltaPhiSelection_N_jets_btagged.pdf} 
   \end{tabular}
-  \caption{B-tag multiplicity after applying the baseline selection in simulated events. The signal points are labeled as (X, Y) where X is the top squark mass and Y is the LSP mass.}
+  \caption{B-tag multiplicity after applying the baseline selection in simulated events. The signal points are labelled as (X, Y) where X is the top squark mass and Y is the LSP mass.}
   \label{fig:stop_baseline_btag}
 \end{figure}
 Consequently, the expected exclusion reach of the analysis is supposed to improve when applying the b-tag requirement in addition to the baseline selection. Thus, the same exclusive search regions as defined in Tab.~\ref{tab:stop_excl_search_bins} are used considering the same total uncertainties as described in Sec.~\ref{sec:stop_baseline} for a performance comparison of this improved selection with respect to the baseline requirements. The expected limits for the baseline selection as well as the baseline selection and the b-tag requirement are shown in Fig~\ref{fig:stop_baselinebtag_limit}. It turns out that the b-tag requirement significantly improves the sensitivity of the analysis towards the specified top squark mass range. Especially lower masses could be tested with such an anlaysis strategy. However, since the focus of this analysis is put on higher stop quark masses, it is discussed in the next section how this mass range can be adressed better.  
@@ -160,7 +160,7 @@ Consequently, the expected exclusion reach of the analysis is supposed to improv
   \begin{tabular}{c}
                 \includegraphics[width=0.49\textwidth]{figures/Stop_NoCuts_leading_t_ptgen.pdf} 
   \end{tabular}
-  \caption{Transverse momentum spectrum of the leading generated top quarks without applying any selection criteria. The signal points are labeled as (X, Y) where X is the top squark mass and Y is the LSP mass.}
+  \caption{Transverse momentum spectrum of the leading generated top quarks without applying any selection criteria. The signal points are labelled as (X, Y) where X is the top squark mass and Y is the LSP mass.}
   \label{fig:stop_gen_top_pt}
 \end{figure} 
 In order to gain a better understanding of the kinematics of the investigated final state, the \pt spectrum of the leading generated top quark is illustrated in Fig.~\ref{fig:stop_gen_top_pt} for \ttbar background and two selected signal points without applying any selection criteria. It turns out that the \pt spectrum of the signal is significantly harder than that of the \ttbar background. For instance for a stop mass of 1000\gev the maximum lies at a \pt range around 400-500\gev. As discussed in Sec.~\ref{sec:boosted_tops}, decay products emerging from the decay of a top quark with large transverse momentum do not show up as separated objects in the detector, but merge into jets with large radius parameter. Following Equation~\ref{eq:rule-of-thumb} the opening angle of decay products from a top quark with transverse momentum between 400-500\gev is supposed to be $R = 0.8$. Thus, such topologies are well suited to utilize the top tagging techniques described in Sec.~\ref{sec:boosted_tops}. \\
@@ -191,7 +191,7 @@ Consequently, in analyses which rely on top quarks with moderate transverse mome
   \caption{Top tag multiplicity for the CMS top tagger (\textit{left}) and the HEP top tagger (\textit{right}) after application of the baseline selection. Only CA-jets of the correpsonding jet size with a transverse momentum above 150\gev are considered.}
   \label{fig:stop_top_tag_multi}
 \end{figure} 
-The impact on the analysis when applying top tag requirements can be studied when looking for instance at the top tag multiplicity. In Fig.~\ref{fig:stop_top_tag_multi} the top tag multiplicity is shown for the CMS top tagger (left) and the HEP top tagger (right) after the application of the baseline selection. Here, only CA-jets of the corresponding jet size with a transverse momentum above 150\gev are considered since the taggers are not supposed to be efficienct for smaller momenta. The distributions exhibit that although also a significant amount of signal events does not have a CA-jet identified as top jet by the respective algorithm the background can be significantly reduced when reuqiring at least one top-tagged jet. In general the number of signal events with one or two top tags is larger when using the HEP top tagger than for the CMS tagger, but also the number of background events from \ttbar shows a larger value for the HEP top tagger case since more \ttbar events with lower top transverse momenta are selected. \\
+The impact on the analysis when applying top tag requirements can be studied when looking for instance at the top tag multiplicity. In Fig.~\ref{fig:stop_top_tag_multi} the top tag multiplicity is shown for the CMS top tagger (left) and the HEP top tagger (right) after the application of the baseline selection. Here, only CA-jets of the corresponding jet size with a transverse momentum above 150\gev are considered since the taggers are not supposed to be efficienct for smaller momenta. The distributions exhibit that although also a significant amount of signal events does not have a CA-jet identified as top jet by the respective algorithm the background can be significantly reduced when requiring at least one top-tagged jet. In general the number of signal events with one or two top tags is larger when using the HEP top tagger than for the CMS tagger, but also the number of background events from \ttbar shows a larger value for the HEP top tagger case since more \ttbar events with lower top transverse momenta are selected. \\
 In order to test the impact of the top tagging requirement on the search sensitivity, the expected limits are derived again based on the search regions defined in Tab.~\ref{tab:stop_excl_search_bins} with the same uncertainties as assumed in Sec.~\ref{sec:stop_baseline}. The results are illustrated in Fig~\ref{fig:stop_baselinetoptag_limit}. \\
 \begin{figure}[!h]
   \centering
@@ -207,8 +207,71 @@ It turns out that for the HEP top tagger as well as for the CMS top tagger the u
 \section{Performance Comparison of Various Kinematic Selections}
 \label{sec:stop_cuts}
 
-\section{Performance Comparison to Published Analysis}
+\begin{figure}[!h]
+  \centering
+  \begin{tabular}{c}
+                \includegraphics[width=0.49\textwidth]{figures/limitplot4BinSel_BaselineBTagTopTagTransverseMass.pdf} 
+  \end{tabular}
+  \caption{Expected 95\% upper limit for signal strength versus $m_{\tilde{t}}$. The LSP mass is chosen to be 50\gev.}
+  \label{fig:stop_baselinetoptag_limit}
+\end{figure}
+
+\section{Performance Comparison to Selection Based on Published Stop Analysis at $\sqrt{s} = 8$\tev}
 \label{sec:stop_pub}
+In order to get a better understanding of the quality of the studied selections, a comparison to the analysis criteria used in an analysis based on the same final state that was successfully performed at $\sqrt{s} = 8$\tev is carried out. The respective analysis is published in~\cite{CMS-PAS-SUS-13-015}. \\
+The comparison is done by performing the same selections as done in the offical analysis based on the simulated samples discussed in Sec.~\ref{sec:stop_samples}. Jets in this analysis are clustered with the anti-$k_T$ algorithm with a distance parameter of 0.5 and corrected for pile-up effects by applying charged-hadron subtraction. The pre-selection criteria in the analysis are:
+\begin{itemize}
+ \item Events with isolated electrons and muons with \pt$ > 10$\gev, as described in Sec.~\ref{sec:stop_baseline}, are vetoed.
+ \item Events have to have at least five jets with \pt$ > 30$\gev and $|\eta| < 2.4$. The two highest \pt jets further have to have \pt$> 70$\gev while the next two highest jets in \pt must fulfill \pt$ > 50$\gev.
+ \item There has to be at least one b-tagged jet in the event based on the CSV algorithm with medium working point. 
+ \item The minimum azimuthal angle between the three highest jets and the missing transverse momentum has to be $\Delta \phi(\mathrm{jet}_n, \met) > 0.5$, $n = 1,2$ and $\Delta \phi(\mathrm{jet}_3, \met) > 0.3$.\footnote{The missing transverse energy in the published analysis is denoted with $\pt^\mathrm{miss}$.}% However, just like \met, it is the magnitude of the negative vector sum of the transverse momenta of all particles reconstructed in the event.}
+\end{itemize}
+The only difference between these selection criteria and the published analysis is related to the lepton veto. The published analysis requires to have no events with identified and isolated electrons and muons with \pt$> 5$\gev while here only events with electrons and muons with \pt$> 10$\gev are vetoed. However, since the 10\gev lepton veto is the same lepton veto requirement as for the other selections studied in this chapter, it is easier to compare the quality of the different selections applied to the sample after selecting the all-jet final state. \\
+In addition to those pre-selection requirements, further selection criteria are imposed in order to reconstruct the hadronically-decaying top quarks. The set of five or more jets in the event is separated into all possible combinations of three jets and a remnant which must contain at least one b-tagged jet. These sets are used to reconstruct the two expected top quarks in the event: one is based on one of the trijet combinations and denoted \textit{fully-reconstructed} top while the other is based on the remnant system and referred to as \textit{partially-reconstructed} top. Details on the reconstruction process of the two top quark systems can be found in~\cite{CMS-PAS-SUS-13-015}. In particular this process involves, that the fully-reconstructed top quark has to satisfy the criteria described in Eq.~\ref{eq:hep_1},~\ref{eq:hep_2} and~\ref{eq:hep_3} with $R_\mathrm{min} = 0.85 \cdot (m_W/m_\mathrm{top})$, $R_\mathrm{max} = 1.25 \cdot (m_W/m_\mathrm{top})$, $m_W = 80.4$\gev and $m_\mathrm{top} = 173.1$\gev. If there is more than one trijet system satisfying these criteria the combination with $m^{3-\mathrm{jet}}$ closest to $m_\mathrm{top}$ is selected. The selected remnant system is denoted Rsys. \\
+\begin{figure}[!t]
+  \centering
+\makebox[\linewidth]{
+  \begin{tabular}{cc}
+                \includegraphics[width=0.49\textwidth]{figures/ReferenceStop_BTag_MET.pdf} & 
+                \includegraphics[width=0.49\textwidth]{figures/ReferenceStop_BTag_ref_MT2.pdf} \\
+                \includegraphics[width=0.49\textwidth]{figures/ReferenceStop_BTag_ref_Mt3jet.pdf} & 
+                \includegraphics[width=0.49\textwidth]{figures/ReferenceStop_BTag_ref_MtRsys.pdf}
+  \end{tabular}}
+  \caption{Comparison of \met, $M_{T2}$, $M_{T}^\mathrm{3-jet}$ and $M_{T}^\mathrm{Rsys}$ distributions for signal and background events after applying pre-selection criteria. The signal points are labelled as (X, Y) where X is the top squark mass and Y is the LSP mass.}
+  \label{fig:stop_ref_plots}
+\end{figure} 
+After the successful identification of the two top quark systems according to the above mentioned criteria, further topological requirements are used. These are:
+\begin{itemize}
+ \item \met $> 200$\gev
+ \item The variable $M_{T2}$, as discussed in Sec.~\ref{sec:stop_cuts}, is required to be $\ge 300$\gev. It is calculated from the four momenta of the fully- and the partially-reconstructed top quark as well as \met assuming the invisible particles to be massless. 
+ \item $(0.5 \cdot M_{T}^\mathrm{3-jet} + M_{T}^\mathrm{Rsys}) \ge 500$\gev. $ M_{T}^\mathrm{3-jet}$ and $M_{T}^\mathrm{Rsys}$ denote the transverse mass of the fully-reconstructed and the remnant system, respectively, which are calculated according to
+\begin{equation*}
+( M_{T}^\mathrm{3-jet})^2 = (m^{3-\mathrm{jet}})^2 + 2(E_T^\mathrm{3-jet} \, \met - p_T^\mathrm{3-jet} \, \met \, \mathrm{cos} \Delta \phi)
+\end{equation*} 
+and 
+\begin{equation*}
+( M_{T}^\mathrm{Rsys})^2 = (m^\mathrm{Rsys})^2 + 2(E_T^\mathrm{Rsys} \, \met - p_T^\mathrm{Rsys} \, \met \, \mathrm{cos} \Delta \phi) \; .
+\end{equation*} 
+\end{itemize}
+A comparison of the \met, $M_{T2}$, $M_{T}^\mathrm{3-jet}$ and $M_{T}^\mathrm{Rsys}$ distributions for signal and background events after the pre-selection is shown in Fig.~\ref{fig:stop_ref_plots}. These exhibit that those topological variables are aible to reject several background events while keeping good acceptance for signal events. \\
+In order to probe different points of the parameter space, events are further categorized into four inclusive search regions:
+\begin{itemize}
+ \item \met $>$ 200\gev, $N_\mathrm{b-jets} \ge 1$ 
+ \item \met $>$ 350\gev, $N_\mathrm{b-jets} \ge 1$ 
+ \item \met $>$ 200\gev, $N_\mathrm{b-jets} \ge 2$ 
+ \item \met $>$ 350\gev, $N_\mathrm{b-jets} \ge 2$ 
+\end{itemize}   
+Uncertainties in the expected limit calculation performed for each of these categories to compare the reach to the selections discussed above are considered to be the same as those assumed in Sec.~\ref{sec:stop_baseline}. This again makes it easier to compare the actual performance of various selections. From each of the four search regions the expected limit giving the best sensitivity to a specific mass point is considered in the comparison. This is for the scenarios tested here with stop masses ranging from 600 -- 1100\gev and a LSP mass of 50\gev, the selection requiring \met $>$ 350\gev, $N_\mathrm{b-jets} \ge 2$. The actual comparison of the expected limits is illustrated in Fig~\ref{fig:stop_baselinetoptagref_limit}. \\
+\begin{figure}[!h]
+  \centering
+  \begin{tabular}{c}
+                \includegraphics[width=0.49\textwidth]{figures/limitplot4BinSel_BaselineTopTagTransverseMassRef.pdf} 
+  \end{tabular}
+  \caption{Expected 95\% upper limit for signal strength versus $m_{\tilde{t}}$. The LSP mass is chosen to be 50\gev.}
+  \label{fig:stop_baselinetoptagref_limit}
+\end{figure}
+
+The distributions exhibit that the selection based on the requirements used in~\cite{CMS-PAS-SUS-13-015} shows a quite good sensitivity for low stop masses while the sensitivity drops rapidly towards higher stop masses. However, the selection proposed in Sec.~\ref{sec:stop_cuts} performs better for all mass scenarios.  
 
 \section{Studies of Alternative Selections}
 \label{sec:stop_alternatives}
