--- a/Thesis.bib
+++ b/Thesis.bib
@@ -3992,6 +3992,32 @@ Uncertainties based on
       year          = "2014",
 }
 
+@article{Butterworth:2008tr,
+      author         = "Butterworth, Jonathan M. and Davison, Adam R. and Rubin,
+                        Mathieu and Salam, Gavin P.",
+      title          = "{Jet substructure as a new Higgs search channel at the
+                        LHC}",
+      year           = "2008",
+      eprint         = "0810.0409",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-ph",
+      SLACcitation   = "%%CITATION = ARXIV:0810.0409;%%",
+}
+
+@article{Krohn:2009th,
+      author         = "Krohn, David and Thaler, Jesse and Wang, Lian-Tao",
+      title          = "{Jet Trimming}",
+      journal        = "JHEP",
+      volume         = "1002",
+      pages          = "084",
+      doi            = "10.1007/JHEP02(2010)084",
+      year           = "2010",
+      eprint         = "0912.1342",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-ph",
+      SLACcitation   = "%%CITATION = ARXIV:0912.1342;%%",
+}
+
 @techreport{CMS-PAS-JME-09-001,
       title         = "{A Cambridge-Aachen (C-A) based Jet Algorithm for boosted
                        top-jet tagging}",
@@ -5031,3 +5057,4 @@ archivePrefix  = "arXiv",
      author  = "J. Ott",
      note     = "\href{www.theta-framework.de}{www.theta-framework.de}"
 }
+
