--- a/Objects.tex
+++ b/Objects.tex
@@ -87,7 +87,7 @@ p^{cor} = C \cdot p^{raw} = C_{\mathrm{offset}}(\pt^{raw}, \eta) \cdot C_{\mathr
  \item \textbf{L2L3 Residual Correction:} In order to compensate for remaining response differences between simulated events and data, residual correction factors are derived. These are applied to data only and correct for remaining differences in the data-to-simulation ratio of the relative jet energy scale. Such corrections can be derived from events featuring a momentum balance in the transverse plane like dijet events (used for the L2 residual determination) or $\mathrm{Z/\gamma+jet}$ events (used for the measurement of the L3 residual correction).
 \end{description}
 The calibration factors are obtained with respect to the average flavour composition of a QCD mulitjet sample. Thus, further steps of correction factors can be applied for specific analysis purposes correcting e.g. the different response for various jet flavours.  However, such higher order corrections are not used in this thesis. \\ 
-The actual set of correction factors used in this thesis, if not stated otherwise, is documented in~\cite{CMS-DP-2013-033} and illustrated in Fig. ... \todo{Fig. JEC}. In total, the size of the JES corrections are at the order of ... \todo{size of JEC}.
+The actual set of correction factors used in this thesis, if not stated otherwise, is documented in~\cite{CMS-DP-2013-033}.% and illustrated in Fig. ... \todo{Fig. JEC}. In total, the size of the JES corrections are at the order of ... \todo{size of JEC}.
 
 \section{Identification of b-Quark Jets}
 \label{sec:btagging}
@@ -124,15 +124,32 @@ Supersymmetric models or other scenarios describing physics beyond the Standard 
 \end{figure}
 The top-quark is the heaviest quark with a mass of $173.34 \pm 0.76$\gev~\cite{ATLAS:2014wva} resulting in a rapid decay. This decay happens even faster than the hadronisation timescale such that the top-quark behaves in the detector as a bare quark without forming color-neutral hadrons. The decay takes place via the weak interaction and as denoted in Sec.~\ref{sec:sm}, the quark mixing is parametrized by the CKM-matrix. Since the corresponding matrix element $V_{\mathrm{tb}} \approx 1$, the top quark decays thus almost exclusively into a W boson and a b-quark. Therefore, the decay of the top-quark is strongly characterized by the decay of the W boson. In general, the W boson can decay into a charged lepton and its corresponding neutrino or a pair of light quarks which are up, down, charm and strange. Taking into account the three possible colour states for eack quark pair this results in nine different W decay modes. Consequently, two thirds of top quark decays result exclusively in hadrons which is typically referred to as \textit{hadronic top}. If top quarks are produced with low energy ($< 2 m_{t}$), the decay will predominantly occur at rest and the top decay products show up as three distinct signatures in the detector. In the case of hadronic tops these are three well separated jets. However, if the top transverse momentum is high, the decay products are \textit{boosted} and thus collimated in the forward direction. Consequently, they might overlap and merge into a single large jet (\textit{fat jet}). The opening angle of the decay products $\Delta R$ is expected to scale as
 \begin{equation}
- \Delta R \approx 2\,m /p_{T}
+ \Delta R \approx 2\,m /\pt
  \label{eq:rule-of-thumb}
 \end{equation}  
 where m and \pt are the mass and the transverse momentum of the decaying particle, respectively. Schematic diagrams of resolved and boosted top quark decays are illustrated in Fig.~\ref{fig:boosted_top}. The identification of boosted top-quark decays -- here restricted to hadronic tops -- is typically known as \textit{top tagging} and aims at the determination of the decay
 \begin{equation}
  t \rightarrow W + b \rightarrow qq' + b 
 \end{equation} 
-by analysing the substructure of fat jets and applying kinematic selections\todo{jet grooming}. \\ 
-Within the CMS experiment several top tagging algorithms (or short \textit{taggers}) are commissioned~\cite{CMS:2014fya, CMS-DP-2014-036}. Two of them are described in some detail in the following:
+by analysing the substructure of fat jets and applying kinematic selections. Typically, such fatjets are more prone to radiation in the event that is wrongly associated to the hard jet than jets with smaller radii. Such unwanted contributions often result in a degraded resolution. In order to mitigate such effects \textit{jet grooming} techniques can be employed:
+\begin{description}
+ \item \textbf{Filtering~\cite{Butterworth:2008tr}:} Jet constituents are recombined by rerunning the Cambridge-Aachen algorithm with a smaller distance parameter, like 0.3. With this procedure hard subjets are identified. The filtering is performed by keeping only $n$ of the identified subjets. Thus, the dominant contribution from the hard process is captured while contamination from the underlying event is removed.
+ \item \textbf{Pruning~\cite{Ellis:2009su}:} In contrast to filtering, pruning is not aiming at finding a particular number of subjets. Rather the idea is to systematically remove soft and large angle recombinations in the jet clustering process. Thus, the jet clustering is rerun using the initial jet constituents. \\
+For the recombination of objects $i, j$, two conditions are defined:
+\begin{equation*}
+z = \frac{\mathrm{min}(p_{\mathrm{T},i}, p_{\mathrm{T},j})}{|\vec{p}_{\mathrm{T},i} + \vec{p}_{\mathrm{T},j}|} < z_\mathrm{cut}
+\end{equation*}
+\begin{equation*}
+\Delta R_{i,j} > D_\mathrm{cut} = \frac{m_{J}}{p_{\mathrm{T}, J}}
+\end{equation*}
+where $m_{J}$ and $p_{T, J}$ are the mass and the transverse momentum of the original fatjet, respectively. Whenever these two conditions are satistified, the recombination of objects $i$ and $j$ is not performed. For the Cambridge-Aachen algorithm $z_{cut}$ is typically chosen to be 0.1.
+ \item \textbf{Trimming~\cite{Krohn:2009th}:} Similarly to the filtering procedure, the jet trimming is based on the concept of identifying subjets within an initially clustered large jet, here called \textit{seed jet}. The constituents of this seed jet are reclustered again using a jet clustering algorithm with a smaller distance parameter than for the seed jet. If 
+\begin{equation*}
+p_{\mathrm{T},i} < f_{\mathrm{cut}} \cdot \Lambda_{\mathrm{hard}} \; ,
+\end{equation*}
+the contributions from subjet $i$ to the seed jet are removed. Here, $f_{\mathrm{cut}}$ is a fixed dimensionless parameter and $\Lambda_{\mathrm{hard}}$ a scale chosen with respect to the specific kinematics of the event. While $f_{\mathrm{cut}}$ quantifies the expected hierarchy between FSR and ISR or pileup, the hard scale $\Lambda_{\mathrm{hard}}$ usually represents the transverse momentum of the seed jet or the effective mass of the event.% which is the scalar sum of the transverse momenta.
+\end{description} 
+In order to identify decays of boosted hadronic top quarks, as discussed above, several top tagging algorithms (or short \textit{taggers}) are commissioned within the CMS experiment~\cite{CMS:2014fya, CMS-DP-2014-036}. Two of them are described in some detail in the following:
 \begin{description}
 \begin{figure}[!tp]
   \centering 
@@ -150,7 +167,7 @@ Within the CMS experiment several top tagging algorithms (or short \textit{tagge
  \item -- The invariant mass of each pair of the three subjets highest in \pt is calculated. The minimum of the pairwise masses $m_{\mathrm{min}}$ has to be close to the W mass: $m_{\mathrm{min}} > 50$\gev.
 \end{description}
 In Fig.~\ref{fig:boosted_top_cms_variables}, the distributions for jet mass and minimum pairwise mass are illustrated for a simulated $t\bar{t}$ (red) and QCD multijet (black) sample at $\sqrt{s} = 8$\tev. 
- \item \textbf{HEP Top Tagger:} The HEP Top Tagger~\cite{Plehn:2010st} uses jets with an even larger distance parameter than the CMS Top Tagger of $R = 1.5$ (CA15 jets). This makes the HEP top-tagging algorithm especially suitable for tops with moderate boost. Fat jets with a transverse momentum greater than 200\gev are used as input for the algorithm. Since a larger jet size is in principle more prone to disturbing effects from the underlying event or pile-up, a sophisticated decomposition procedure is applied to distinuigh hard subjets from soft components. Similar to the decomposition done for the CMS tagger, the identification of subjets is based on going through the cluster history of a jet in reversed order. First, the jet is decomposed into subclusters applying a \textit{mass drop condition} discarding too soft components. Afterwards, all combinations of three clusters resulting from the mass drop decomposition are reclustered into subjets. For each combination the subjets are filterd by keeping only the five subjets highest in \pt. Finally, the combination with the mass determined from the filtered subjets closest to the top mass is kept and reclustered to force three subjets. Details on the mass drop decomposition and reclustering criteria can be found in~\cite{CMS:2014fya}. Kinematic selections are applied to these three final subjets in order to identify the top jets. The following quantities are used based on the invariant mass of combinations of subjets:
+ \item \textbf{HEP Top Tagger:} The HEP Top Tagger~\cite{Plehn:2010st} uses jets with an even larger distance parameter than the CMS Top Tagger of $R = 1.5$ (CA15 jets). This makes the HEP top-tagging algorithm especially suitable for tops with moderate boost. Fat jets with a transverse momentum greater than 200\gev are used as input for the algorithm. Since a larger jet size is in principle more prone to disturbing effects from the underlying event or pile-up, a sophisticated decomposition procedure is applied to distinguish hard subjets from soft components. Similar to the decomposition done for the CMS tagger, the identification of subjets is based on going through the cluster history of a jet in reversed order. First, the jet is decomposed into subclusters applying a \textit{mass drop condition} discarding too soft components. Afterwards, all combinations of three clusters resulting from the mass drop decomposition are reclustered into subjets. For each combination the subjets are filterd by keeping only the five subjets highest in \pt. Finally, the combination with the mass determined from the filtered subjets closest to the top mass is kept and reclustered to force three subjets. Details on the mass drop decomposition and reclustering criteria can be found in~\cite{CMS:2014fya}. Kinematic selections are applied to these three final subjets in order to identify the top jets. The following quantities are used based on the invariant mass of combinations of subjets:
 \begin{figure}[!tp]
   \centering 
   \begin{tabular}{cc}
@@ -164,15 +181,18 @@ In Fig.~\ref{fig:boosted_top_cms_variables}, the distributions for jet mass and 
  \item -- The invariant mass of the sum of the four-vectors of the three subjets is required to be in the top mass window: $m_{\mathrm{123}} = 140 - 250$\gev.
  \item -- In order to select the W mass the jet has to satisfy at least one of the following conditions based on the subjet pairwise masses
 \begin{description}
- \item \begin{equation*}
+ \item \begin{equation}
 0.2 < \mathrm{atan} \frac{m_{\mathrm{13}}}{m_{\mathrm{12}}} < 1.3 \; \; \mathrm{and} \; \; R_{\mathrm{min}} < \frac{m_{\mathrm{23}}}{m_{\mathrm{123}}} < R_{\mathrm{max}}
-\end{equation*}
- \item \begin{equation*}
+\label{eq:hep_1}
+\end{equation}
+ \item \begin{equation}
 R^2_{\mathrm{min}}(1+(\frac{m_{\mathrm{13}}}{m_{\mathrm{12}}})^2) < 1 - (\frac{m_{\mathrm{23}}}{m_{\mathrm{123}}})^2) < R^2_{\mathrm{max}}(1+(\frac{m_{\mathrm{13}}}{m_{\mathrm{12}}})^2) \; \; \mathrm{and} \; \; \frac{m_{\mathrm{23}}}{m_{\mathrm{123}}} > 0.35
-\end{equation*}
- \item \begin{equation*}
+\label{eq:hep_2}
+\end{equation}
+ \item \begin{equation}
 R^2_{\mathrm{min}}(1+(\frac{m_{\mathrm{12}}}{m_{\mathrm{13}}})^2) < 1 - (\frac{m_{\mathrm{23}}}{m_{\mathrm{123}}})^2) < R^2_{\mathrm{max}}(1+(\frac{m_{\mathrm{12}}}{m_{\mathrm{13}}})^2) \; \; \mathrm{and} \; \; \frac{m_{\mathrm{23}}}{m_{\mathrm{123}}} > 0.35
-\end{equation*}
+\label{eq:hep_3}
+\end{equation}
 \end{description}
 where the indices of $m$ indicate the rank of the considered subjets with respect to the transverse momentum, $R_{\mathrm{min}} = (1 - f_{W}) \times m_W/m_t$ and $R_{\mathrm{max}} = (1 + f_{W}) \times m_W/m_t$ for the W mass width chosen to be $f_W = 0.495$.  
 \end{description}
