--- a/Stop.tex
+++ b/Stop.tex
@@ -3,7 +3,7 @@ The targeted process of this analysis is illustrated in a diagram in Fig.~\ref{f
 \begin{figure}[!h]
   \centering
   \begin{tabular}{c}
-                \includegraphics[width=0.49\textwidth]{figures/T2tt.pdf} 
+                \includegraphics[width=0.65\textwidth]{figures/T2tt.pdf} 
   \end{tabular}
   \caption{Schematic diagram of the direct pair production of stop quarks in pp collisions with subsequent decay into a top quark and the LSP. Taken from~\cite{bib:CMS:PhysicsResultsSUS}. }
   \label{fig:T2tt}
@@ -14,6 +14,56 @@ In this Chapter, various analysis strategies for a search for top squarks at $\s
 
 \section{Data samples}
 \label{sec:stop_samples}
+\begin{table}[!t]
+%\fontsize{9 pt}{1.2 em}
+%\selectfont
+\centering
+\caption{Overview of simulated background and signal samples used in the analysis and corresponding production cross sections.}
+\makebox[\linewidth]{
+\begin{tabular}{llcc}
+\multicolumn{4}{c}{} \\
+\toprule
+   Process &  & $\sigma$ & Precision \\
+   \midrule
+   \midrule
+   \ttbar & & 0.805 [nb] & NNLO \\
+   \midrule
+   \WJets & \HT = [0, 50]\gev  & 99.92 [nb] & LO \\
+          & \HT = [50, 150]\gev  & 15.98 [nb] & LO \\
+          & \HT = [150, 300]\gev  & 1.328 [nb] & LO \\
+          & \HT = [300, $\infty$]\gev  & 0.169 [nb] & LO \\
+   \midrule
+   \ZJets & \HT = [0, 100]\gev & 22.0 [nb] & LO \\
+          & \HT = [100, 300]\gev & 0.951 [nb]& LO \\
+          & \HT = [300, $\infty$]\gev & 0.0396 [nb]& LO \\
+   \midrule
+   QCD multijet & \HT = [100, 250]\gev & 22\,930 [nb]& LO \\
+                & \HT = [250, 500]\gev & 465 [nb] & LO \\
+                & \HT = [500, 1000]\gev & 18.66 [nb] & LO \\
+                & \HT = [1000, $\infty$]\gev & 0.536 [nb] & LO \\
+   \midrule
+   \midrule
+   Stop-pair production & $m_{\tilde{t}}$ = 600\gev &  0.17460 [pb] & NLO \\
+                        & $m_{\tilde{t}}$ = 700\gev &  0.06705 [pb] & NLO \\ 
+                        & $m_{\tilde{t}}$ = 800\gev &  0.02833 [pb] & NLO \\ 
+                        & $m_{\tilde{t}}$ = 900\gev &  0.01289 [pb] & NLO \\ 
+                        & $m_{\tilde{t}}$ = 1000\gev & 0.00615 [pb] & NLO \\ 
+                        & $m_{\tilde{t}}$ = 1100\gev & 0.00307 [pb] & NLO \\ 
+   \midrule
+   \midrule
+   Gluino-pair production & $m_{\tilde{g}}$ = 1300\gev & 0.0211 [pb] & NLO \\
+                          & $m_{\tilde{g}}$ = 1500\gev & 0.0064 [pb] & NLO \\ 
+                          & $m_{\tilde{g}}$ = 1700\gev & 0.0021 [pb] & NLO \\ 
+   \bottomrule
+\end{tabular}}
+\label{tab:stop_samples}
+\end{table}    
+The studies presented in this chapter are based on simulated samples at $\sqrt{s} = 13$\tev. However, the pileup scenario considered for the samples is the same as for conditions present at $\sqrt{s} = 8$\tev including out-of-time pileup according to a bunch spacing of 50\,ns. Although these are not the pileup conditions expected for $\sqrt{s} = 13$\tev, the selections studied here typically are based on objects with high transverse momenta such that influences from pileup are supposed to be negligible in good approximation. Nevertheless, possible disturbing effects and performance degradation due to pileup necessarily have to be studied as soon as first collision data at $\sqrt{s} = 13$\tev are available. \\
+The processes considered in the analysis for background and signal events are summarized in Tab.~\ref{tab:stop_samples}. \WJets, \ZJets and QCD multijet events are generated with MadGraph5 using the PDF CTEQ6L1 while \ttbar events are generated with POWHEG and the MSTW2008 PDF. For all samples the showering process is performed with PYTHIA6 Tune Z2-star. \\
+The process \WJets includes decays with $W \rightarrow l \nu$ with up to two jets. Similarly, also the process \ZJets includes up to two jets. Here, decays $Z \rightarrow \nu \nu$ are modelled. For these processes, cross sections are considered at leading order. The scale factors to NLO cross sections are 1.04 and 1.07 for \WJets and \ZJets, respectively. \\
+For background processes \WJets, \ZJets and QCD, samples are generated for different \HT selections at generator level. This procedure ensures that especially for the kinematic regions under study which typically concentrate on high-\pt objects a sufficient number of events is generated. \\
+In order to study signal events, two different processes are generated. On the one hand direct stop-pair production is considered in which the $\tilde{t}$ always decays to a stable neutralino $\tilde{\chi}_{0}^{1}$ and a top quark with mass $m_{t} = 172.5$\gev including all decay channels of the top quark. These samples are generated with different neutralino masses of 50, 100, 150, 200, 250, 300 and 350\gev. On the other hand gluino-pair production is generated with a decay $\tilde{g} \rightarrow \ttbar \tilde{\chi}_{0}^{1}$. For the top quark only fully hadronic decays are simulated. The cross section given in Tab.~\ref{tab:stop_samples} for gluino-pair production is corrected for the hadronic branching fraction of the top quark. The neutralino mass is fixed to 50\gev. \\
+All samples are normalized to an integrated luminosity of 19.5\fbinv which corresponds to the same amount of data recorded at $\sqrt{s} =8$\tev.
 
 \section{Sensitivity of a Basic Selection using \HT and \met}
 \label{sec:stop_baseline}
@@ -97,7 +147,7 @@ In order to determine the expected exclusion reach, the uncertainties for the in
  \item \WJets: 20\%
  \item \ttbar: 20\% + additional 20\% in the high \met search regions
 \end{itemize}  
-which are meant to be total uncertainties such that the actual statistical uncertainty of the number of simulated MC events is not considered explicitly. Based on the selected event yields and the estimated uncertainties the 95\% confidence-level expected upper limit is calculated as an asymptotic $\mathrm{CL_s}$ limit~\cite{bib:theta}. The obtained exclusion curve is shown in Fig.~\ref{fig:stop_baseline_limit} for the signal strength $\mu$ which is the excluded production cross section divided by the theoretical cross section for direct stop production as function of the stop quark mass. Consequently, a particular mass point can be excluded, if the expected limit drops below one. However, it turns out that this baseline selection cuts and the subsequent binning in exclusive search regions is not yet sensitive enough to probe any of the selected mass points. Thus, possible improvements of the analysis are discussed in the following sections.  
+which are meant to be total uncertainties such that the actual statistical uncertainty of the number of simulated MC events is not considered explicitly. Based on the selected event yields and the estimated uncertainties the 95\% confidence-level expected upper limit is calculated as an asymptotic $\mathrm{CL_s}$ limit~\cite{bib:theta}. The obtained exclusion curve is shown in Fig.~\ref{fig:stop_baseline_limit} for the signal strength $\mu$ which is the excluded production cross section divided by the theoretical cross section for direct stop production as function of the stop quark mass. The LSP mass is fixed to 50\gev in order to study the sensitivity of the selection for signal scenarios with large mmass splittings between stop and neutralino mass. A particular mass point can be excluded, if the expected limit drops below one. However, it turns out that this baseline selection cuts and the subsequent binning in exclusive search regions is not yet sensitive enough to probe any of the selected mass points. Thus, possible improvements of the analysis are discussed in the following sections.  
 
 \begin{table}[!t]
 %\fontsize{10 pt}{1.2 em}
