--- a/Thesis.bib
+++ b/Thesis.bib
@@ -3495,7 +3495,71 @@ Uncertainties based on
       note           = {DESY-THESIS-2012-018}
 }
 
+@article{Chatrchyan:2012wa,
+      author         = "Chatrchyan, Serguei and others",
+      title          = "{Search for supersymmetry in final states with missing
+                        transverse energy and 0, 1, 2, or at least 3 b-quark jets
+                        in 7 TeV pp collisions using the variable alphaT}",
+      collaboration  = "CMS Collaboration",
+      journal        = "JHEP",
+      volume         = "1301",
+      pages          = "077",
+      doi            = "10.1007/JHEP01(2013)077",
+      year           = "2013",
+      eprint         = "1210.8115",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-ex",
+      reportNumber   = "CMS-SUS-11-022, CERN-PH-EP-2012-290",
+      SLACcitation   = "%%CITATION = ARXIV:1210.8115;%%",
+}
 
+@article{Chatrchyan:2012jx,
+      author         = "Chatrchyan, Serguei and others",
+      title          = "{Search for supersymmetry in hadronic final states using
+                        MT2 in $pp$ collisions at $\sqrt{s} = 7$ TeV}",
+      collaboration  = "CMS Collaboration",
+      journal        = "JHEP",
+      volume         = "1210",
+      pages          = "018",
+      doi            = "10.1007/JHEP10(2012)018",
+      year           = "2012",
+      eprint         = "1207.1798",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-ex",
+      reportNumber   = "CMS-SUS-12-002, CERN-PH-EP-2012-058, CERN-PH-EP-2012-186",
+      SLACcitation   = "%%CITATION = ARXIV:1207.1798;%%",
+}
+
+@article{Chatrchyan:2012uea,
+      author         = "Chatrchyan, Serguei and others",
+      title          = "{Inclusive search for supersymmetry using the razor
+                        variables in $pp$ collisions at $\sqrt{s}=7$ TeV}",
+      collaboration  = "CMS Collaboration",
+      journal        = "Phys.Rev.Lett.",
+      number         = "8",
+      volume         = "111",
+      pages          = "081802",
+      doi            = "10.1103/PhysRevLett.111.081802",
+      year           = "2013",
+      eprint         = "1212.6961",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-ex",
+      reportNumber   = "CMS-SUS-11-024, CERN-PH-EP-2012-332",
+      SLACcitation   = "%%CITATION = ARXIV:1212.6961;%%",
+}
+
+@article{Chatrchyan:2014goa,
+      author         = "Chatrchyan, Serguei and others",
+      title          = "{Search for supersymmetry with razor variables in pp
+                        collisions at $\sqrt{s}$=7 TeV}",
+      collaboration  = "CMS Collaboration",
+      year           = "2014",
+      eprint         = "1405.3961",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-ex",
+      reportNumber   = "CMS-SUS-12-005, CERN-PH-EP-2014-057",
+      SLACcitation   = "%%CITATION = ARXIV:1405.3961;%%",
+}
 
 % --- LHC, CMS detector performance, object reconstruction ----
 @inproceedings{Turner:235242,
