--- a/Stop.tex
+++ b/Stop.tex
@@ -238,7 +238,7 @@ Consequently, in analyses which rely on top quarks with moderate transverse mome
                 \includegraphics[width=0.49\textwidth]{figures/Stop_DeltaPhiSelection_N_jets_toptagged.pdf} & 
                 \includegraphics[width=0.49\textwidth]{figures/Stop_DeltaPhiSelection_N_jets_HEPtoptagged.pdf} \\
   \end{tabular}}
-  \caption{Top tag multiplicity for the CMS top tagger (\textit{left}) and the HEP top tagger (\textit{right}) after application of the baseline selection. Only CA-jets of the correpsonding jet size with a transverse momentum above 150\gev are considered.}
+  \caption{Top tag multiplicity for the CMS top tagger (\textit{left}) and the HEP top tagger (\textit{right}) after application of the baseline selection. Only CA-jets of the corresponding jet size with a transverse momentum above 150\gev are considered.}
   \label{fig:stop_top_tag_multi}
 \end{figure} 
 The impact on the analysis when applying top tag requirements can be studied when looking for instance at the top tag multiplicity. In Fig.~\ref{fig:stop_top_tag_multi} the top tag multiplicity is shown for the CMS top tagger (left) and the HEP top tagger (right) after the application of the baseline selection. Here, only CA-jets of the corresponding jet size with a transverse momentum above 150\gev are considered since the taggers are not supposed to be efficienct for smaller momenta. The distributions exhibit that although also a significant amount of signal events does not have a CA-jet identified as top jet by the respective algorithm the background can be significantly reduced when requiring at least one top-tagged jet. In general the number of signal events with one or two top tags is larger when using the HEP top tagger than for the CMS tagger, but also the number of background events from \ttbar shows a larger value for the HEP top tagger case since more \ttbar events with lower top transverse momenta are selected. \\
@@ -251,11 +251,76 @@ In order to test the impact of the top tagging requirement on the search sensiti
   \caption{Expected 95\% upper limit for signal strength versus $m_{\tilde{t}}$. The LSP mass is chosen to be 50\gev.}
   \label{fig:stop_baselinetoptag_limit}
 \end{figure}
-
 It turns out that for the HEP top tagger as well as for the CMS top tagger the usage of a top tag requirement in addition to the baseline selections significantly improves the search sensitivity by a factor of two to three. Hence, mass points up to ($m_{\tilde{t}}, m_\mathrm{LSP}$) = (700, 50) or even (800, 50) can be probed. This selection is also better than the result obtained when adding a b-tag requirement as discussed in Sec.~\ref{sec:stop_btagging} which allows to probe stop masses around 600\gev for an LSP mass of 50\gev. In general, the selection based on the CMS top tagger performs better than the selection involving the HEP top tagger, since the signal to background ratio is higher as discussed above.
 
 \section{Performance Comparison of Various Kinematic Selections}
 \label{sec:stop_cuts}
+The sensitivity of the analysis for top squark searches based on the baseline requirements discussed in Sec.~\ref{sec:stop_baseline} can be improved already significantly when employing in addition b-tag and top-tag requirements, as shown in Sec.~\ref{sec:stop_btagging} and~\ref{sec:stop_btagging}. Nevertheless, the sensitivity might still be improved when imposing further kinematic selections. \\
+\begin{figure}[!t]
+  \centering
+\makebox[\linewidth]{
+  \begin{tabular}{cc}
+                \includegraphics[width=0.49\textwidth]{figures/Stop_DeltaPhiSelection_t_decay_channels.pdf} & 
+                \includegraphics[width=0.49\textwidth]{figures/Stop_TopTag_t_decay_channels.pdf} \\
+  \end{tabular}}
+  \caption{Comparison of decay modes of signal and background processes defined according to the top quark properties based on generator information after the baseline selection (\textit{left}) and after the baseline selection and the requirement of $\ge 1$ CMS Top Tag (\textit{right}). For a definition of the decay channels see text.}
+  \label{fig:stop_top_channels}
+\end{figure} 
+In order to address the specific kinematics of the various background contributions, first the background composition is studied. In Fig.~\ref{fig:stop_top_channels} the background and signal processes are shown according to the decay mode of the process after the application of the baseline selection (left) and the baseline selection with an additional requirement of $\ge 1$ CMS Top Tag (right). These channels are defined according to the top quark properties based on generator information. The first channel includes all non-top backgrounds and the all-hadronic top decays. Channels two to four exhibit the semi-leptonic top decays which are involving electrons (channel two), muons (channel three) and tau leptons (channel four). The distributions exhibit that after the application of the top-tagging requirement the main background contribution arises from \ttbar events. Here, contributions from lost-leptons (channel two and three) and hadronically decaying tau leptons (channel four) occur in about equal amounts with slightly more hadronic tau events. Since in general the number of events is small after application of the top tag requirement, kinematic selections and their performance are investigated when applying baseline selection criteria. Nonetheless, since \ttbar is known to be the largest background after top tagging, special emphasis is put on reducing the \ttbar background contributions. \\
+Several kinematic variables exist that have been successfully used already in various susy searches at $\sqrt{s} = 7$ and 8\tev:
+\begin{description}
+ \item $\mathbf{\alpha_T:}$ The $\alpha_T$ variable is mainly used to reject QCD multijet events which have no intrinsic \met~\cite{Chatrchyan:2012wa, Chatrchyan:2013lya}. In case of dijet events, it is defined as:
+\begin{equation}
+ \alpha_T = \frac{E_T^{j_2}}{M_T} \;\; \mathrm{with} \;\; M_T = \sqrt{\left( \sum_{i=1}^{2} E_T^{j_i} \right)^2 - \left( \sum_{i=1}^{2} p_x^{j_i} \right)^2 - \left( \sum_{i=1}^{2} p_y^{j_i} \right)^2}
+\end{equation}
+with the transverse energy $E_T^{j_2}$ of the less energetic jet and the transverse mass $M_T$ of the dijet system. Since in case of boosted top quark decays the two top quarks are supposed to be represented each by one fatjet, the $\alpha_T$ variable is in this studies calculated from the two leading CA8 jets. The distribution of the $\alpha_T$ variable after application of the baseline selection requirements is shown in Fig.~\ref{fig:stop_baseline_kin_vars} (top left). Typically, $\alpha_T$ is 0.5 for an ideal dijet event with $E_T^{j_1} = E_T^{j_2}$ in which each jet momentum is large compared to its mass. If an imbalance occurs due to a jet mismeasurement, $\alpha_T$ drops below 0.5 while it is greater than 0.5 when the two jets recoil against real \met, as for instance resulting from LSPs.
+
+ \item $\mathbf{M_\mathrm{T2}:}$ The $M_\mathrm{T2}$ variable represents a generalized version of the transverse mass~\cite{Lester:1999tx, Barr:2003rg, Chatrchyan:2012jx, CMS-PAS-SUS-13-019}. In events with pair-produced particles which decay further and eventually contain undetectable particles in the decay products, as \eg LSPs, the event kinematics are underconstrained and thus a classical transverse mass can not be determined. The $M_\mathrm{T2}$ variable is defined for two identical decay chains as
+\begin{equation}
+ M_\mathrm{T2}(m_{\tilde{\chi}}) = \min_{\vec{p}_\mathrm{T}^{\;\tilde{\chi}(1)} + \vec{p}_\mathrm{T}^{\;\tilde{\chi}(2)} = \vec{p}_\mathrm{T}^{\; \mathrm{miss}}} \left[ \mathrm{max} \left(M_\mathrm{T}^{(1)}, M_\mathrm{T}^{(2)} \right) \right] 
+\end{equation} 
+with the two transverse masses ($i = 1, 2$)
+\begin{equation}
+ (M_\mathrm{T}^{(i)})^2 = (m^{\mathrm{vis}(i)})^2 + m_{\tilde{\chi}}^2 + 2 \left( E_\mathrm{T}^{\mathrm{vis}(i)} E_\mathrm{T}^{\tilde{\chi}(i)} - \vec{p}_\mathrm{T}^{\; \mathrm{vis}(i)} \cdot \vec{p}_\mathrm{T}^{\; \tilde{\chi}(i)}   \right) 
+\end{equation}
+described by the transverse momenta $\vec{p}_\mathrm{T}^{\, \mathrm{vis}(i)}$, transverse energies $E_\mathrm{T}^{\mathrm{vis}(i)}$ and masses $m^{\mathrm{vis}(i)}$ for the visible systems and the unknown transverse momenta of the LSPs $\vec{p}_\mathrm{T}^{\tilde{\chi}(i)} $. Experimentally, the momenta $\vec{p}_\mathrm{T}^{\tilde{\chi}(i)}$ are not accessible separately. Thus, a minimization on trial LSP masses fulfilling the constraint given by $\vec{p}_\mathrm{T}^{\; \mathrm{miss}}$, the missing transverse momentum\footnote{More commonly denoted by \metvec in this thesis.} is performed. This minimization is carried out to make sure that $M_\mathrm{T2}$ does not exceed the mass of the parent particle. For the correct value of $m_{\tilde{\chi}}$, the distribution of $M_\mathrm{T2}$ is expected to have an endpoint at the mass of the parent particle. \\
+In this studies, the two visible systems are assumed to be described by the two leading CA8 jets in the event. The mass of the neutralinos is considered to be zero in the calculation of $M_\mathrm{T2}$. \\ 
+The obtained distributions for $M_\mathrm{T2}$ in background and signal samples are shown in Fig~\ref{fig:stop_baseline_kin_vars} (top right). They exhibit that the maximum of $M_\mathrm{T2}$ is higher for signal events than for background such that this variable is supposed to be well suited to distinguish signal and background events.  
+ \item \textbf{Razor variables:} The kinematic razor variables are used to quantify the generic process of pair production of two heavy particles which subsequently decay into visible products usually represented by two (large) jets and an undetected particle~\cite{Chatrchyan:2012uea, Chatrchyan:2014goa, CMS-PAS-SUS-14-011}. These variables are used to test, if the two jets represent the visible part of the decay of two heavy objects. \\
+The razor variables are defined as
+\begin{equation}
+M_\mathrm{R} = \sqrt{\left[(|\vec{p}^{\; j1} | + |\vec{p}^{\; j2} |)^2 - (p_z^{\; j1}  + p_z^{\; j2} )^2 \right]}
+\end{equation}
+ \begin{equation}
+M_\mathrm{T}^\mathrm{R} = \sqrt{\frac{1}{2} \left( \met (\pt^{\; j1}  + \pt^{\; j2} ) - \metvec \cdot (\vec{p}^{\; j1} + \vec{p}^{\; j2}) \right) }
+\end{equation}
+\begin{equation}
+R = \frac{M_\mathrm{T}^\mathrm{R}}{M_\mathrm{R}}
+\end{equation}
+with the transverse momenta of the two jets $\pt^{j1}$ and $\pt^{j2}$. For signal events $M_\mathrm{T}^\mathrm{R}$ has an endpoint and $R$ a maximum of approximately one. \\
+For these studies, the two leading CA8 jets and \met are used to compute the razor variables. In Fig.~\ref{fig:stop_baseline_kin_vars} the variable $R^2$ is illustrated (bottom) after the application of baseline selection criteria. 
+\end{description} 
+In addition to these variables, which are already well established in searches for supersymmetry, also other kinematic quantities can be considered
+\begin{description}
+ \item \textbf{Transverse mass} $\mathbf{m_T}$ \textbf{:}
+ \item $\mathbf{\Delta \phi(CA}$--$\mathbf{jet_1, CA}$--$\mathbf{jet_2)}$ \textbf{:}
+\end{description}
+ 
+\begin{figure}[!t]
+  \centering
+  % \makebox[\linewidth]{
+  \begin{minipage}[c]{1.\textwidth}
+    \begin{center}
+      \includegraphics[width=0.49\textwidth]{figures/Stop_DeltaPhiSelection_AlphaT.pdf}  
+      \includegraphics[width=0.49\textwidth]{figures/Stop_DeltaPhiSelection_MT2.pdf} \\
+      \includegraphics[width=0.49\textwidth]{figures/Stop_DeltaPhiSelection_Razor_R.pdf}
+    \end{center}
+  \end{minipage}
+
+  \caption{Distribution of the $\alpha_T$ variable (\textit{top left}), $M_\mathrm{T2}$ (\textit{top right}) and  the razor variable $R^2$ (\textit{bottom}) after application of the baseline selection requirements for background and two selected signal samples. The signal points are labelled as (X, Y) where X is the top squark mass and Y is the LSP mass.}
+  \label{fig:stop_baseline_kin_vars}
+\end{figure}
+
 
 \begin{figure}[!h]
   \centering
