--- a/Stop.tex
+++ b/Stop.tex
@@ -416,13 +416,47 @@ Uncertainties in the expected limit calculation performed for each of these cate
 
 The distributions exhibit that the selection based on the requirements used in~\cite{CMS-PAS-SUS-13-015} shows a quite good sensitivity for low stop masses while the sensitivity drops rapidly towards higher stop masses. However, the selection proposed in Sec.~\ref{sec:stop_cuts} performs better for all mass scenarios.  
 
-\section{Studies of Alternative Selections}
-\label{sec:stop_alternatives}
+%\section{Studies of Alternative Selections}
+%\label{sec:stop_alternatives}
+%As discussed in Sec.~\ref{sec:stop_pub}, a selection developed in the context of this thesis could be identified that is well suited to probe stop masses up to the \tev range for an LSP mass of 50\gev at $\sqrt{s} = 13$\tev and performs even better than the selection criteria developed for the search for direct stop quark production at $\sqrt{s} = 8$\tev. However, it is discussed in this section which specific criteria of the studied selections leave further room for improvement and how alternative selections might be better suited to probe specific regions of the phase space. \\
+%The evolution of the signal efficiency as function of the stop quark mass for a LSP mass of 50\gev is shown in Fig.~\ref{fig:stop_signal efficiency} for the application of different selection criteria. 
+ 
+%\begin{figure}[!t]
+%  \centering
+%  \begin{tabular}{c}
+%                \includegraphics[width=0.49\textwidth]{figures/SignalEfficiencySummary.pdf} 
+%  \end{tabular}
+%  \caption{Signal efficiency as function of the stop quark mass for a LSP mass of 50\gev for various selection requirements.}
+%  \label{fig:stop_signal efficiency}
+%\end{figure}
 
 \section{Sensitivity to Gluino-Mediated Stop Production}
 \label{sec:stop_gluinos}
+The selections studied in this chapter are mainly aiming at identifying events from direct pair production of top squarks which subsequently decay into a top quark and a LSP each. Special emphasis is put on identifying mass scenarios with large mass splittings between top squark and LSP which is suitable for employing top tagging techniques. However, the studied selections possibly offer an interesting alternative to classical selections targeting gluino-mediated production of third generation squarks. In those scenarios pair produced gluinos are considered that subsequently decay into a pair of top quarks and a LSP. Thus, the final state exhibits four top quarks. For gluino masses exceeding 1\tev this potentially gives rise to also boosted top quark decays in the final state. Consequently, the sensitivity of the best performing selection criteria based on the baseline selection, at least one CMS top-tagged jet and a transverse mass selection of $m_T > 180$\gev is also evaluated with respect to the gluino-mediated stop production. This is done for three different mass scenarios, as specififed in Sec.~\ref{sec:stop_samples}, with gluino masses of 1.3\tev, 1.5\tev and 1.7\tev for a LSP mass of 50\gev, respectively. Based on the same search strategy as before using exclusive \HT and \met search regions, the derived expected exclusion curve for gluino-mediated stop production is illustrated in Fig.~\ref{fig:stop_gluino_mediated_limit}. \\
+\begin{figure}[!h]
+  \centering
+  \begin{tabular}{c}
+                \includegraphics[width=0.49\textwidth]{figures/limitplot4BinSel_T1tttt.pdf} 
+  \end{tabular}
+  \caption{Expected 95\% upper limit for signal strength versus $m_{\tilde{g}}$. The LSP mass is chosen to be 50\gev.}
+  \label{fig:stop_gluino_mediated_limit}
+\end{figure}
+
+The distributions exhibit that the derived selection described in Sec.~\ref{sec:stop_cuts} is also sensitive to the tested mass scenarios of gluino-mediated stop production. Thus, selections involving top tagging are also offering the opportunity to probe susy scenarios than direct stop production as long as top quarks with high transverse momenta are present in the final state. Such selections could serve as complementary approach to search strategies like those employed in chapter~\ref{chap:RA2} for further supersymmetry searches at $\sqrt{s} = 13$\tev. 
 
 \section{Results and Discussion}
 \label{sec:stop_results}
+Selections based on different kinematic properties of direct stop pair production have been studied and analysis strategies were identified that allow to probe direct stop production up to 1\tev in case of an LSP mass of 50\gev (cf. Sec.~\ref{sec:stop_cuts}). However, the sensitivity of this selection targeting large mass splittings between stop and LSP can be evaluated also for other mass scenarios. Thus, the same search strategy and assigned uncertainties have been used to probe the expected exclusion reach for the same stop masses as before but when considering the LSP mass to be larger up to 350\gev. The derived exclusion curves are summarized in Fig.~\ref{fig:stop_2Dlimit} in the $m_{\tilde{t}}$ versus $m_\mathrm{LSP}$ plane. \\
+\begin{figure}[!h]
+  \centering
+  \begin{tabular}{c}
+                \includegraphics[width=0.49\textwidth]{figures/2Dlimitplot.pdf} 
+  \end{tabular}
+  \caption{Expected 95\% upper limit for $m_{\tilde{t}}$ versus $m_\mathrm{LSP}$. Note that the x-axis starts at 600\gev. }
+  \label{fig:stop_2Dlimit}
+\end{figure}
 
-
+The selections illustrated there are baseline requirements plus at least one medium b-tagged jet (dark blue), baseline requirements and $m_T > 180$\gev (magenta), the selection following~\cite{CMS-PAS-SUS-13-015} discussed in Sec.~\ref{sec:stop_pub} (black) and the selection based on the baseline selection employing top tagging and $m_T > 180$\gev (light blue). The areas below the lines can be excluded. Consequently, for the blue selection stop masses up to 1\tev can be tested for LSP masses not exceeding 300\gev. \\
+In general, the conclusions found in previous sections hold true also for the two dimensional exclusion curves. The best sensitivity for a wide range of mass point configurations is achieved by the selection introduced in Sec.~\ref{sec:stop_cuts}. Although the selection following the already published analysis at $\sqrt{s} = 8$\tev is able to probe stop masses up to 700-800\gev also for other LSP masses than 50\gev, the sensitivity towards larger stop masses is not achieved. Consequently, these studies suggest that either the existing analysis has to be improved in order to test the whole stop mass range up to 1\tev or a search strategy as proposed in this chapter should be employed. \\
+However, when deciding on a particular analysis strategy for direct stop production at $\sqrt{s} = 13$\tev it has to be kept in mind that the studies presented here, are based on some simplifications.  The pileup scenario considered in the simulation is not the actual expected situation during the next running period, but uses the pileup conditions form $\sqrt{s} = 8$\tev. As discussed already in Sec.~\ref{sec:stop_samples} this should in principle not affect the analysis shown here too much. Furthermore, the samples have been processed based on the fast detector simulation only. Although this has shown a comparable performance to the full simulation for several quantities in the past, as discussed in Sec.~\ref{sec:simulation}, no dedicated studies have been performed yet, if those holds true also for all jet substructure variables used for the top tagging algorithms. Nevertheless, the derived efficiency and misidentification rates shown in Fig.~\ref{fig:stop_top_eff} show a similar performance to those quantities at $\sqrt{s} = 8$\tev (cf. Sec.~\ref{sec:boosted_tops}). Consequently, the performance improvement of the analysis due to an employment top tagging is expected to be estimated at the correct order of magnitude. In addition to those simplified assumptions also the considered uncertainties for the different background processes are based on ad hoc assumptions. Although they have been chosen in correspondence to the considered uncertainties in~\cite{CMS-PAS-SUS-13-015}, it is not yet studied how precisely the individual background contributions can be estimated for the extreme kinematic regions targeted by the top tagging selections when employing a still to be defined data-based background estimation procedure. \\
+Since though all those simplifications affect the various selections studied in this chapter in a similar manner, the sensitivity of various selections relative to each other should not be affected by this. Nevertheless, the absolute expected analysis reach might be better or worse by a few 10\gev than found in these studies. However, as discussed above most of the simplifications should have only a minor impact on the presented selections. Consequently, the expected data at $\sqrt{s} = 13$\tev supposably further shed light on the question of a realization of natural supersymmetry in data manifesting in top squarks below the \tev mass range. 
